Fixes typo on front page welcome box

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -88,10 +88,10 @@
     <div class="welcome well">
         <h1>Velkommen til Nabla</h1>
         <p>
-            Nabla er linjeforeningen for ved studenter sivilingeniørstudiet Fysikk og Matematikk ved NTNU, og har 
+            Nabla er linjeforeningen for studenter ved sivilingeniørstudiet Fysikk og Matematikk ved NTNU, og har 
             som formål å være en sosial arena, i tillegg til å fremme studentenes faglige interesser. Gjennom året
-            arrangerer Nabla et mangfold av ulike arrangementer, og har 25 ulike undergrupper som studentene kan 
-            bli med og engasjere seg i.
+            arrangerer Nabla et mangfold av ulike arrangementer, og har 25 ulike undergrupper som studentene kan
+            engasjere seg i.
         </p>
         <h4>Ny student?</h4>
         <p>
