--- a/nablapps/nablaforum/templates/nablaforum/thread.html
+++ b/nablapps/nablaforum/templates/nablaforum/thread.html
@@ -24,7 +24,7 @@
 <h4>{{ thread.threadstarter.get_full_name }} skriver:</h4>
 <div class="des">{{ thread.text }}</div>
 
-{% for message in thread_messages reversed %}
+{% for message in object_list %}
     <div class="well">
         <h4>{{ message.user.get_full_name }}</h4>
         <p>{{ message.message }}</p>
@@ -41,16 +41,17 @@
 
 {% if is_paginated %}
     <span class="step-links">
-        {% if thread_messages.has_previous %}
-            <a href="?page={{ thread_messages.previous_page_number }}">forrige</a>
+        {% if page_obj.has_previous %}
+            <a href="?page={{ page_obj.previous_page_number }}">Eldre</a>
         {% endif %}
 
         <span class="current">
-            side {{ thread_messages.number }} av {{ thread_messages.paginator.num_pages }}
+            side {{ page_obj.number }} av {{ page_obj.paginator.num_pages }}
         </span>
 
-        {% if thread_messages.has_next %}
-            <a href="?page={{ thread_messages.next_page_number }}">neste</a>
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">Nyere</a>
+           | <a href="?page=last">Nyeste</a>
         {% endif %}
     </span>
 
