Create general view for both thread view and channel view

--- a/nablapps/nablaforum/templates/nablaforum/channel.html
+++ b/nablapps/nablaforum/templates/nablaforum/channel.html
@@ -15,7 +15,7 @@
 
 <p>{{ channel.description }}</p>
 
-{% for thread in threads %}
+{% for thread in thread_list %}
 <a href="{% url "thread-view" channel_id=channel_id thread_id=thread.pk %}?page=last">
 {% include "nablaforum/includes/tiles.html" with object=thread %}
 </a>
