--- a/nablapps/nablaforum/templates/nablaforum/thread.html
+++ b/nablapps/nablaforum/templates/nablaforum/thread.html
@@ -24,7 +24,7 @@
 <h4>{{ thread.threadstarter.get_full_name }} skriver:</h4>
 <div class="des">{{ thread.text }}</div>
 
-{% for message in object_list %}
+{% for message in message_list %}
     <div class="well">
         <h4>{{ message.user.get_full_name }}</h4>
         <p>{{ message.message }}</p>
