Changes qrTicket image format to svg

--- a/nablapps/qrTickets/templates/qrTickets/email/ticket.html
+++ b/nablapps/qrTickets/templates/qrTickets/email/ticket.html
@@ -2,7 +2,7 @@
 
 <h1> Din billett: </h1>
 
-{% qr_from_text ticket_url size="M" image_format="png" %}
+{% qr_from_text ticket_url size="M" %}
 
 <h3>{{ ticket_url }}</h3>
 
