--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
 
 
 
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+{#        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">#}
         <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-pink.min.css" />
         <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
@@ -172,7 +172,7 @@
         <span class="mdl-layout-title">Title</span>
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" href="{% url "event_list" %}">Arrangementer</a>
-          <a class="mdl-navigation__link" href="{% url "jobs_list" %}">Karriere/a>
+          <a class="mdl-navigation__link" href="{% url "jobs_list" %}">Karriere</a>
           <a class="mdl-navigation__link" href="{% url "nablad_list" %}">Nablade</a>
           <a class="mdl-navigation__link" href="{% url "season_view" %}">Skråttcast</a>
         </nav>
@@ -332,7 +332,7 @@
                             </li>
                         </ul>
                         {# end navigasjonslenker #}
-                        <form class="form-inline" id="searchtop" method="get" action="{% url "haystack_search" %}">
+                        <form class=form-inline" id="searchtop" method="get" action="{% url "haystack_search" %}">
                             <div class="input-group">
                                 <input name="q" placeholder="Søk..." type="text" class="form-control">
                                 <span class="input-group-btn">
