lagt til label tag i 'ignorer påmeldingsregler'

--- a/nablapps/events/templates/events/event_administer.html
+++ b/nablapps/events/templates/events/event_administer.html
@@ -38,8 +38,8 @@
         <input type="hidden" name="action" value="add" />
         <button class="btn btn-primary" type="submit" value="Legg til" >Legg til </button>
     </div>
-    <input class="form-check-input" type="checkbox" name = "Regelboks" value="True" id="">
-    Ignorer påmeldingsregler &emsp;
+    <input class="form-check-input" type="checkbox" name = "Regelboks" value="True" id="regelBoks">
+    <label for="regelBoks">Ignorer påmeldingsregler</label> &emsp;
 </form>
 
  <form action="" method="post" class="form">{% csrf_token %}
