--- a/nablapps/events/templates/events/includes/info.html
+++ b/nablapps/events/templates/events/includes/info.html
@@ -113,6 +113,21 @@
     </tr>
     {% endif %}
 
+    {% if event.penalty%}
+    <tr>
+        <td>Prikkreglement</td>
+        {% if event.penalty == 1%}
+        <td><a href={% url 'wiki:retningslinjer-arrangement/'%}>Bedpress</td>
+        {% endif %}
+        {% if event.penalty == 2%}
+        <td><a href={% url 'wiki:get' 'retningslinjer-arrangement/'%}>Arrangement med betaling</td>
+        {% endif %}
+        {% if event.penalty == 3%}
+        <td><a href={% url 'wiki:get' 'retningslinjer-arrangement/'%}>Arangement uten betaling</td>
+        {% endif %}
+    </tr>
+    {% endif %}
+
     <tr>
         <td style="text-align: center;" colspan="2">
             {% if is_attending %}
