Adds possibility to add a flatpage as sidebarcontent to joblist views.
This is for an eventual move of "StudForsk"-logo and eventual addition
of "SaP"-logo. This may be a more appropriate placement for them.

--- a/nablapps/jobs/templates/jobs/sidebar_include.html
+++ b/nablapps/jobs/templates/jobs/sidebar_include.html
@@ -1,4 +1,5 @@
 {% load humanize %}
+{% load markdown %}
 
 {% if years%}
 <p>Se stillingsannonser relevant for {% for year in years %}<a href="{% url "relevant_for_year_list" year=year.year %}">{{ year }}</a>, {% endfor %}
@@ -12,3 +13,11 @@
 <h3>Vil du ha stillingsannonsen din her?</h3>
 <p>Ønsker bedriften din å legge ut en stillingsannonse på denne siden, ta kontakt med Bedriftskontakten Nabla på <a href="mailto:bedkom@nabla.ntnu.no">
 bedkom@nabla.ntnu.no.</a></p>
+
+{% if jobsidebarinfo %}
+    <p>
+        {{ jobsidebarinfo.content | markdown:"unsafe" }}
+    </p>
+{% endif %}
+
+
