Adds date field

--- a/nablapps/events/templates/events/event_main_page.html
+++ b/nablapps/events/templates/events/event_main_page.html
@@ -160,6 +160,7 @@
             {% endfor %}
 
             {{ filter_form.sort }}
+            {{ filter_form.start_time }}
             <input type="submit" value="Filtrer">
             </form>
         </div>
