Fixes link to "prikkereglement" for bedpres.

--- a/nablapps/events/templates/events/includes/info.html
+++ b/nablapps/events/templates/events/includes/info.html
@@ -117,13 +117,13 @@
     <tr>
         <td>Prikkreglement</td>
         {% if event.penalty == 1%}
-        <td><a href={% url 'wiki:retningslinjer-arrangement/'%}>Bedpress</td>
+        <td><a href={% url 'wiki:get' 'retningslinjer-arrangement/' %}>Bedpress</td>
         {% endif %}
         {% if event.penalty == 2%}
-        <td><a href={% url 'wiki:get' 'retningslinjer-arrangement/'%}>Arrangement med betaling</td>
+        <td><a href={% url 'wiki:get' 'retningslinjer-arrangement/' %}>Arrangement med betaling</td>
         {% endif %}
         {% if event.penalty == 3%}
-        <td><a href={% url 'wiki:get' 'retningslinjer-arrangement/'%}>Arangement uten betaling</td>
+        <td><a href={% url 'wiki:get' 'retningslinjer-arrangement/' %}>Arangement uten betaling</td>
         {% endif %}
     </tr>
     {% endif %}
