--- a/templates/about.html
+++ b/templates/about.html
@@ -31,9 +31,9 @@
                 <a href="/nystudent/"><li>For nye studenter</li></a>
                 <a href="{% url "news_list" %}"><li>Nyhetsartikler</li></a>
                 <a href="http://bokskap.nabla.no/"><li>Bokskap</li></a>
-                <a href="{% url "wiki:root" %}"><li>Internwiki</li></a> <a href="{% url "ex_frontpage" %}"><li>Utveksling</li></a>
-
-
+                <a href="{% url "wiki:root" %}"><li>Internwiki</li></a>
+                <a href="{% url "ex_frontpage" %}"><li>Utveksling</li></a>
+                <a href="https://drive.google.com/drive/u/1/folders/0AIfT2N9gx5wOUk9PVA"><li>Nablabanken</li></a>
             </ul>
         {% endblock navbar %}
     </div>
