Use places, not free places

--- a/nablapps/events/templates/events/event_main_page.html
+++ b/nablapps/events/templates/events/event_main_page.html
@@ -184,7 +184,7 @@
                         </div>
                         {% if event.registration_required %}
                         <div class="event_list__event__meta">
-                            {{ event.users_attending }} / {{ event.free_places }}
+                            {{ event.users_attending }} / {{ event.places }}
                             <span class="fa fa-user"></span>
                         </div>
                         {% endif %}
