Adds notice about nablaforum in alpha stage

--- a/nablapps/nablaforum/templates/nablaforum/index.html
+++ b/nablapps/nablaforum/templates/nablaforum/index.html
@@ -8,6 +8,10 @@
     <link  rel="stylesheet" href="{% static "nablaforum/forum.css" %}">
 {% endaddtoblock %}
 
+<div class="alert" style="background-color: red">
+    <h4>Nablaforum er i alfa-stadiet, og innholdet vil ikke nødvendigvis vedvare. Dersom det viser seg å være nødvendig for utviklingen kan alt innhold bli slettet av WebKom, men 
+    det er bare å bruke det for gøy!</h4>
+</div> 
 
 <h1>Nablaforum</h1>
 
