Updating FontAwesome version from 4 to 5
-Changed FontAwesome supplier to @fortawesome/fontawesome-free
-Updated old icons to the new format

This breaks some icons in django-wiki which still uses FontAwesome 4

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,9 @@
         {% addtoblock "css" %}
         <link rel="stylesheet" href="{% static "bootstrap/dist/css/bootstrap.min.css" %}">
         <link rel="stylesheet" href="{% static "bootstrap/dist/css/bootstrap-theme.min.css" %}">
-        <link rel="stylesheet" href="{% static "font-awesome/css/font-awesome.min.css" %}">
+        <link rel="stylesheet" href="{% static "@fortawesome/fontawesome-free/css/fontawesome.min.css" %}">
+        <link rel="stylesheet" href="{% static "@fortawesome/fontawesome-free/css/brands.min.css" %}">
+        <link rel="stylesheet" href="{% static "@fortawesome/fontawesome-free/css/solid.min.css" %}">
         <link href="{% static "css/default.css" %}" rel="stylesheet">
         {% endaddtoblock %}
         <!-- css-block -->
@@ -327,10 +329,10 @@
                         <img src="{% static "img/nabla-white.svg" %}" alt="nabla logo">
                         <br />
                         <br />
-                        <a href="https://www.facebook.com/nablantnu/" class="fa fa-facebook fa-4x social-icon"></a>
-                        <a href="https://www.instagram.com/nablalinjeforening/" class="fa fa-instagram fa-4x social-icon"></a>
-                        <a href="https://nablantnu.slack.com/" class="fa fa-slack fa-4x social-icon"></a>
-                        <a href="https://github.com/Nabla-NTNU/nablaweb" class="fa fa-github fa-4x social-icon"></a>
+                        <a href="https://www.facebook.com/nablantnu/" class="fab fa-facebook-f fa-4x social-icon"></a>
+                        <a href="https://www.instagram.com/nablalinjeforening/" class="fab fa-instagram fa-4x social-icon"></a>
+                        <a href="https://nablantnu.slack.com/" class="fab fa-slack fa-4x social-icon"></a>
+                        <a href="https://github.com/Nabla-NTNU/nablaweb" class="fab fa-github fa-4x social-icon"></a>
                     </div>
             </div>
             </div>
