--- a/templates/wiki/includes/breadcrumbs.html
+++ b/templates/wiki/includes/breadcrumbs.html
@@ -75,7 +75,7 @@
 
 <div class="pull-left" style="margin-left: 5px;">
     <a class="btn btn-info"  href="{% url 'wiki:history' article_id=article.id path=urlpath.path %}" style="padding-bottom: 8px;">
-		 <span class="fa fa-clock-o"></span>
+		 <span class="fas fa-clock"></span>
 		 <span class="hidden-xs">{% trans "Changes" %}</span>
     </a>    
 </div>
