--- a/nablapps/events/templates/events/includes/info.html
+++ b/nablapps/events/templates/events/includes/info.html
@@ -25,7 +25,7 @@
 {% if event.facebook_url %}
 <h3 class="pull-right">
     <a target="_blank" href="{{ event.facebook_url }}" class="btn btn-default btn-sm">
-        <span class="fa fa-facebook-square"></span>
+        <span class="fab fa-facebook-square"></span>
         Vis på Facebook
     </a>
 </h3>
@@ -215,7 +215,7 @@
     </a>
     {% endif %}
     <a class="btn btn-default btn-xs" href="https://calendar.google.com/calendar/r/eventedit?text={{ event.headline }}&dates={{event.event_start|date:'Ymd\THis' }}/{{event.event_end|date:'Ymd\THis' }}&details={{ request.build_absolute_uri }}&location={{ event.location }}&sf=true&output=xml&pli=1" target ="_blank">
-    <span class="fa fa-calendar"></span>
+    <span class="fas fa-calendar-alt"></span>
     Google kalender
 </a>
 </div>
