--- a/templates/wiki/edit.html
+++ b/templates/wiki/edit.html
@@ -42,7 +42,7 @@
   <div class="col-lg-8">
     <div class="col-lg-offset-2">
       <a class="btn btn-default" onclick="$('#previewModal').modal('show'); document.getElementById('article_edit_form').target='previewWindow'; document.getElementById('article_edit_form').action='{% url 'wiki:preview' path=urlpath.path article_id=article.id %}'; $('#article_edit_form').submit()" href="#">
-        <span class="fa fa-eye"></span>
+        <span class="fas fa-eye"></span>
         {% trans "Preview" %}
       </a>
       <a class="btn btn-primary" onclick="window.onbeforeunload = null; document.getElementById('article_edit_form').target=''; document.getElementById('article_edit_form').action='{% url 'wiki:edit' path=urlpath.path article_id=article.id %}'; $('#article_edit_form').submit();" href="#">
@@ -51,7 +51,7 @@
       </a>
       {% if article|can_delete:user %}
       <a href="{% url 'wiki:delete' path=urlpath.path article_id=article.id %}" class="btn btn-danger pull-right">
-        <span class="fa fa-trash-o"></span>
+        <span class="fas fa-trash-alt"></span>
         {% trans "Delete article" %}
       </a>
       {% endif %}
