--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,13 @@
         <link rel="stylesheet" href="{% static "@fortawesome/fontawesome-free/css/brands.min.css" %}">
         <link rel="stylesheet" href="{% static "@fortawesome/fontawesome-free/css/solid.min.css" %}">
         <link href="{% static "css/default.css" %}" rel="stylesheet">
+        {% if custom_color %}
+        <style>
+         nav.navbar {
+             background: {{ custom_color }};
+         }
+        </style>
+        {% endif %}
         {% endaddtoblock %}
         <!-- css-block -->
         {% render_block "css" %}
