Adds a santa class to prevent cheating in the santa hunt

--- a/nablapps/interactive/templates/interactive/santa_hunt.html
+++ b/nablapps/interactive/templates/interactive/santa_hunt.html
@@ -1,10 +1,10 @@
 <h1> Webkoms julenissejakt </h1>
 
-Det finnes ingen nisser enda.
-<br>
+Du har funnet {{ score }} nissejævler!
 
-{{ score }}
-<br>
+<br> <br> <br>
 
-<a href="{% url "register_santa" santa_id="a" redirect_url="hidden_santa" %}">NISSEJÆVEL!</a>
+<a href="{% url "register_santa" santa_id="1" redirect_url="hidden_santa" %}">
+    <img alt="NISSEJÆVEL!" src="https://nabla.no/media/uploads/com_pictures/lopelogo.png" width="200">
+</a>
 
