Adds label to evet filter

--- a/nablapps/events/templates/events/event_main_page.html
+++ b/nablapps/events/templates/events/event_main_page.html
@@ -164,7 +164,7 @@
                 {{ type }}
             {% endfor %}
 
-            {{ filter_form.sort }}
+            {{ filter_form.start_time.label }}
             {{ filter_form.start_time }}
             {{ filter_form.start_time.errors }}
             <input type="submit" value="Filtrer">
