Changes advent calendar link so that it links to the count down.

--- a/templates/base.html
+++ b/templates/base.html
@@ -174,7 +174,10 @@
                                     <li><a href="{% url "meeting_record_list" %}">Styremøtereferater</a></li>
                                     <li><a href="{% url "albums" %}">Bildealbum</a></li>
                                     <li><a href="{% url "blog" %}">Blogg</a></li>
-                                    <li><a href="{% url "advent_calendar" "2018" %}">Julekalender 2018</a></li>
+                                    <li><a href="/julekalender/">Julekalender 2019</a></li>
+{% comment %}
+                                    <li><a href="{% url "advent_calendar" "2019" %}">Julekalender 2019</a></li>
+{% endcomment %}
                                 </ul>
                             </li>
                             <li><a href="{% url "om-nabla" %}">Om Nabla</a></li>
