Adds row gap in grid

--- a/nablapps/events/templates/events/event_main_page.html
+++ b/nablapps/events/templates/events/event_main_page.html
@@ -10,6 +10,7 @@
          "event_list event_list";
      justify-items: stretch;
      grid-column-gap: 40px;
+     grid-row-gap: 20px;
  }
 
  @media (max-width: 600px) {
